LPD-35556 Added new endpoints for delivery and payment terms
